--- a/src/test.html
+++ b/src/test.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="grid/grid.css">
 	<link rel="stylesheet" href="buttons/buttons.css">
 	<link rel="stylesheet" href="forms/forms.css">
+	<link rel="stylesheet" href="tables/tables.css">
 	<link rel="stylesheet" href="test_page.css">
 </head>
 <body>
@@ -554,10 +555,10 @@
 		<table class="table">
 			<thead>
 				<tr>
-					<td>#</td>
-					<td>Name</td>
-					<td>Email</td>
-					<td>Birth</td>
+					<th>#</th>
+					<th>Name</th>
+					<th>Email</th>
+					<th>Birth</th>
 				</tr>
 			</thead>
 
@@ -567,6 +568,100 @@
 					<td>Jose</td>
 					<td>jose@email.com</td>
 					<td>1980</td>
+				</tr>
+				<tr>
+					<td>2</td>
+					<td>Joao</td>
+					<td>joao@email.com</td>
+					<td>1985</td>
+				</tr>
+
+			</tbody>
+		</table>
+
+		<h2>Bordered Table</h2>
+
+		<table class="table table-bordered">
+			<thead>
+				<tr>
+					<th>#</th>
+					<th>Name</th>
+					<th>Email</th>
+					<th>Birth</th>
+				</tr>
+			</thead>
+
+			<tbody>
+				<tr>
+					<td>1</td>
+					<td>Jose</td>
+					<td>jose@email.com</td>
+					<td>1980</td>
+				</tr>
+				<tr>
+					<td>2</td>
+					<td>Joao</td>
+					<td>joao@email.com</td>
+					<td>1985</td>
+				</tr>
+
+			</tbody>
+		</table>
+
+
+		<h2>Horizontal Table</h2>
+
+		<table class="table table-horizontal">
+			<thead>
+				<tr>
+					<th>#</th>
+					<th>Name</th>
+					<th>Email</th>
+					<th>Birth</th>
+				</tr>
+			</thead>
+
+			<tbody>
+				<tr>
+					<td>1</td>
+					<td>Jose</td>
+					<td>jose@email.com</td>
+					<td>1980</td>
+				</tr>
+				<tr>
+					<td>2</td>
+					<td>Joao</td>
+					<td>joao@email.com</td>
+					<td>1985</td>
+				</tr>
+
+			</tbody>
+		</table>
+
+		<h2>Striped Table</h2>
+
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>#</th>
+					<th>Name</th>
+					<th>Email</th>
+					<th>Birth</th>
+				</tr>
+			</thead>
+
+			<tbody>
+				<tr>
+					<td>1</td>
+					<td>Jose</td>
+					<td>jose@email.com</td>
+					<td>1980</td>
+				</tr>
+				<tr>
+					<td>2</td>
+					<td>Joao</td>
+					<td>joao@email.com</td>
+					<td>1985</td>
 				</tr>
 
 			</tbody>
