Added menus, messages. Started config area

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="buttons/buttons.css">
 	<link rel="stylesheet" href="forms/forms.css">
 	<link rel="stylesheet" href="tables/tables.css">
+	<link rel="stylesheet" href="menus/menus.css">
+	<link rel="stylesheet" href="messages/messages.css">
 	<link rel="stylesheet" href="test_page.css">
 </head>
 <body>
@@ -666,6 +668,173 @@
 
 			</tbody>
 		</table>
+
+		<hr>
+		<h1>Menus</h1>
+
+		<h2>Horizontal Menu</h2>
+
+		<nav class="menu">
+			<ul>
+				<li>
+					<a href="#">Home</a>
+				</li>
+				<li>
+					<a href="#" class="active">About</a>
+				</li>
+				<li>
+					<a href="#">Blog</a>
+				</li>
+				<li>
+					<a href="#">Categories</a>
+				</li>
+				<li>
+					<a href="#">Contact</a>
+				</li>
+			</ul>
+		</nav>
+
+		<h2>Bordered Horizontal Menu</h2>
+
+		<nav class="menu menu--bordered">
+			<ul>
+				<li>
+					<a href="#">Home</a>
+				</li>
+				<li>
+					<a href="#" class="active">About</a>
+				</li>
+				<li>
+					<a href="#">Blog</a>
+				</li>
+				<li>
+					<a href="#">Categories</a>
+				</li>
+				<li>
+					<a href="#">Contact</a>
+				</li>
+			</ul>
+		</nav>
+
+		<h2>Horizontal Menu with Heading</h2>
+
+		<nav class="menu menu--bordered">
+			<p class="heading">Site Menu</p>
+			<ul>
+				<li>
+					<a href="#">Home</a>
+				</li>
+				<li>
+					<a href="#" class="active">About</a>
+				</li>
+				<li>
+					<a href="#">Blog</a>
+				</li>
+				<li>
+					<a href="#">Categories</a>
+				</li>
+				<li>
+					<a href="#">Contact</a>
+				</li>
+			</ul>
+		</nav>
+
+		<h2>Vertical Menu</h2>
+
+		<nav class="menu--vertical">
+			<ul>
+				<li>
+					<a href="#">Home</a>
+				</li>
+				<li>
+					<a href="#" class="active">About</a>
+				</li>
+				<li>
+					<a href="#">Blog</a>
+				</li>
+				<li>
+					<a href="#">Categories</a>
+				</li>
+				<li>
+					<a href="#">Contact</a>
+				</li>
+			</ul>
+		</nav>
+
+		<h2>Vertical Menu Bordered</h2>
+
+		<nav class="menu--vertical menu--vertical-bordered">
+			<ul>
+				<li>
+					<a href="#">Home</a>
+				</li>
+				<li>
+					<a href="#" class="active">About</a>
+				</li>
+				<li>
+					<a href="#">Blog</a>
+				</li>
+				<li>
+					<a href="#">Categories</a>
+				</li>
+				<li>
+					<a href="#">Contact</a>
+				</li>
+			</ul>
+		</nav>
+
+		<h2>Vertical Menu with Heading</h2>
+
+		<nav class="menu--vertical menu--vertical-bordered">
+			<p class="heading">Site Menu</p>
+			<ul>
+				<li>
+					<a href="#">Home</a>
+				</li>
+				<li>
+					<a href="#" class="active">About</a>
+				</li>
+				<li>
+					<a href="#">Blog</a>
+				</li>
+				<li>
+					<a href="#">Categories</a>
+				</li>
+				<li>
+					<a href="#">Contact</a>
+				</li>
+			</ul>
+		</nav>
+
+		<hr>
+		<h1>Messages</h1>
+		
+		<div class="message">
+			<p>
+				This is a layout for any kind of message.
+			</p>
+		</div>
+
+		<div class="message message--success">
+			<p>
+				This is a layout for success actions.
+			</p>
+		</div>
+
+		<div class="message message--error">
+			<p>
+				This is a layout for error actions.
+			</p>
+		</div>
+
+		<div class="message message--warning">
+			<p>
+				This is a layout for notice the user about something dangerous.
+			</p>
+		</div>
+
+
+
 
 	</div>
 
