--- a/documentation/index.html
+++ b/documentation/index.html
@@ -1,78 +1,5 @@
-<!doctype html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Opus Front</title>
-
-	<link rel="stylesheet" href="opus-front.css">
-	<link rel="stylesheet" href="style.css">
-
-</head>
-<body>
-
-	<div class="container">
-		
-		<div class="grid">
-			<div class="grid-unit-1 title-area">
-				<h1>Opus Front</h1>
-				<p>Framework CSS para os desenvolvedores da Opus</p>
-			</div>
-		</div>
-
-		<div class="grid">
-			<div class="grid-unit-1-5">
-				<nav class="menu--vertical menu--vertical-bordered menu-content">
-					<ul>
-						<li>
-							<a href="#" class="heading">Seções</a>
-						</li>
-						<li>
-							<a href="#grid">Grid</a>
-						</li>
-						<li>
-							<a href="#forms">Forms</a>
-						</li>
-						<li>
-							<a href="#tables">Tabelas</a>
-						</li>
-						<li>
-							<a href="#buttons">Botões</a>
-						</li>
-						<li>
-							<a href="#messages">Mensagens</a>
-						</li>
-					</ul>
-				</nav>
-			</div>
-
-			<div class="grid-unit-4-5 content">
-				
-				<h2 id="grid">Grid</h2>
-				<hr>
-				<p>
-					O grid segue a filosofia implantada no <a href="http://purecss.io">Pure CSS</a>, considerando proporções ao invés de colunas fixas.
-				</p>
-
-
-				<h2 id="forms">Forms</h2>
-				<hr>
-
-
-				<h2 id="tables">Tabelas</h2>
-				<hr>
-
-
-				<h2 id="buttons">Botões</h2>
-				<hr>
-
-
-				<h2 id="messages">Mensagens</h2>
-				<hr>
-
-			</div>
-		</div>
-
-	</div>
-	
-</body>
-</html>
+<hr>
+<p>layout: default</p>
+<h2 id="title-opus-front">title: Opus Front</h2>
+<p>O <strong>Opus Front</strong> é um framework CSS simples, modularizado, focado em um código semântico e de alta performance.</p>
+<p>Até o momento, o Opus Front completo minificado e gzipped tem 1.7kb.</p>
