--- a/src/index.html
+++ b/src/index.html
@@ -583,7 +583,7 @@
 
 		<h2>Bordered Table</h2>
 
-		<table class="table table-bordered">
+		<table class="table table--bordered">
 			<thead>
 				<tr>
 					<th>#</th>
@@ -613,7 +613,7 @@
 
 		<h2>Horizontal Table</h2>
 
-		<table class="table table-horizontal">
+		<table class="table table--horizontal">
 			<thead>
 				<tr>
 					<th>#</th>
